--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,5 +1,37 @@
 <%= render 'shared/back', path: "reservations_path" %>
 
+<div class="container">
+  <div id="messages" data-reservation-id="<%= @reservation.id %>">
+    <% @reservation.messages.each do |message| %>
+      <div class="message-container card w-50 p-1 mb-1" id="message-<%= message.id %>">
+        <i class="author">
+          <span><%= message.user.first_name %></span>
+          <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
+        </i>
+        <p><%= message.content %></p>
+      </div>
+    <% end %>
+  </div>
+
+  <%= simple_form_for @message, url: reservation_messages_path(@reservation), remote: true do |form| %>
+    <div class="input-group mb-3">
+      <%= form.input :content, as: :string,
+                                wrapper: false,
+                                label: false,
+                                input_html: {
+                                  class: 'chat-input'
+                                } %>
+      <div class="input-group-append">
+        <%= form.submit "Send", class: 'btn btn-primary chat-input' %>
+      </div>
+    </div>
+
+    <%= form.input :reservation_id, as: :hidden %>
+  <% end %>
+</div>
+
+
+
 <div class="container mt-3">
   <div class="logo-container">
     <%= image_tag 'logo.png', class: 'logo-sm' %>
@@ -40,5 +72,6 @@
 
     <%#= render 'change_times', reservation: @reservation %>
   </div>
+
 
 </div>
