--- a/app/views/staff/reservations/index.html.erb
+++ b/app/views/staff/reservations/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <% @reservations_with_event.each do |reservation| %>
-    <div class="card w-50 p-3">
+    <div class="card w-100 p-3 mb-3">
       <h5>Index: <%= link_to "#{reservation.first.id}", staff_reservation_path(reservation.first) %></h5>
       <h5>Guest:</h5>
       <p><%= "#{reservation.first.user.first_name.capitalize} #{reservation.first.user.last_name.capitalize}"%></p>
@@ -10,3 +10,4 @@
     </div>
   <% end %>
 </div>
+
