--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -30,3 +30,39 @@
     </div>
   <% end %>
 </div>
+
+<div class="container">
+  <div id="messages" data-reservation-id="<%= @reservation.id %>">
+    <% @reservation.messages.each do |message| %>
+      <div class="message-container" id="message-<%= message.id %>">
+        <i class="author">
+          <span><%= message.user.first_name %></span>
+          <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
+        </i>
+        <p><%= message.content %></p>
+      </div>
+    <% end %>
+  </div>
+
+        <% if false %>
+          <%= simple_form_for [ @reservation, @message ] do |f| %>
+            <%= f.input :content, label: false, placeholder: "Message" %>
+            <%= f.submit %>
+          <% end %>
+        <% end %>
+
+  <%= simple_form_for @message, url: staff_reservation_messages_path(@reservation), remote: true do |form| %>
+    <div class="input-group mb-3">
+      <%= form.input :content, as: :string,
+                                wrapper: false,
+                                label: false,
+                                input_html: {
+                                  class: 'chat-input'
+                                } %>
+      <div class="input-group-append">
+        <%= form.submit "Send", class: 'btn btn-primary chat-input' %>
+      </div>
+    </div>
+    <%= form.input :reservation_id, as: :hidden %>
+  <% end %>
+</div>
