--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -13,32 +13,38 @@
           <p><%= message.content %></p>
         </div>
       <% end %>
+
       <div class="d-none" data-role="message-template">
-        <div class="reservation-message-container">
+
+        <div class="message-container card p-2 mb-1 w-50" id="id">
           <div class="message-content">
+
             <p class="mb-1" data-role="message-text"></p>
+            
             <div class="text-right">
               <small data-role="message-date"></small>
             </div>
+
           </div>
+        </div>
+
+      </div>
+    </div>
+
+    <%= simple_form_for @message, url: reservation_messages_path(@reservation), remote: true do |form| %>
+      <div class="input-group mb-3">
+        <%= form.input :content, as: :string,
+                                  wrapper: false,
+                                  label: false,
+                                  input_html: {
+                                    class: 'chat-input'
+                                  } %>
+        <div class="input-group-append">
+          <%= form.submit "Send", class: 'btn btn-primary chat-input' %>
         </div>
       </div>
-
-      <%= simple_form_for @message, url: reservation_messages_path(@reservation), remote: true do |form| %>
-        <div class="input-group mb-3">
-          <%= form.input :content, as: :string,
-                                    wrapper: false,
-                                    label: false,
-                                    input_html: {
-                                      class: 'chat-input'
-                                    } %>
-          <div class="input-group-append">
-            <%= form.submit "Send", class: 'btn btn-primary chat-input' %>
-          </div>
-        </div>
-        <%= form.input :reservation_id, as: :hidden %>
-      <% end %>
-    </div>
+      <%= form.input :reservation_id, as: :hidden %>
+    <% end %>
   </div>
 </div>
 
