--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -1,18 +1,36 @@
+<div class="container p-3" style="background-color: beige;">
   <h5>Messages:</h5>
   <div class="container">
-    <div id="messages" data-channel-subscribe="reservation" data-reservation-id="<%= @reservation.id %>">
-      <% @reservation.messages.each do |message| %>
+    <div id="messages" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
+      <% reservation.messages.each do |message| %>
         <div class="message-container card p-2 mb-1 w-50" id="message-<%= message.id %>">
-          <i class="author">
-            <span><%= message.user.first_name %></span>
-            <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-          </i>
-          <p><%= message.content %></p>
+          <div class="message-content">
+            <p class="mb-1"><%= message.content %></p>
+            <div class="text-right">
+              <small><%= message.updated_at.strftime("%a %b %e at %l:%M%p") %></small>
+            </div>
+          </div>
         </div>
       <% end %>
+
+      <div class="d-none" data-role="message-template">
+
+        <div class="message-container card p-2 mb-1 w-50" id="id">
+          <div class="message-content">
+
+            <p class="mb-1" data-role="message-text"></p>
+            
+            <div class="text-right">
+              <small data-role="message-date"></small>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
     </div>
 
-    <%= simple_form_for @message, url: send(path), remote: true do |form| %>
+    <%= simple_form_for message, url: reservation_messages_path(reservation), remote: true do |form| %>
       <div class="input-group mb-3">
         <%= form.input :content, as: :string,
                                   wrapper: false,
@@ -26,17 +44,5 @@
       </div>
       <%= form.input :reservation_id, as: :hidden %>
     <% end %>
-  </div>
-</div>
-
-
-<div class="d-none" data-role="message-template">
-  <div class="reservation-message-container">
-    <div class="message-content">
-      <p class="mb-1" data-role="message-text"></p>
-      <div class="text-right">
-        <small data-role="message-date"></small>
-      </div>
-    </div>
   </div>
 </div>
