--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -1,14 +1,12 @@
 <div class="container p-3" style="background-color: beige;">
   <h5>Messages:</h5>
   <div class="container">
-    <div id="messages" class="d-flex flex-column" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
+    <div id="messages" class="d-flex flex-column" style="overflow-y: scroll; max-height: 400px;" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
       <% reservation.messages.each do |message| %>
         <div class="message-container card rounded p-2 mb-1 w-50 <%= 'align-self-end' if message.user == current_user %>" id="message-<%= message.id %>">
           <div class="message-content">
+            <p class="mb-1"><em><small><%= message.user.first_name %></small> - <small><%= message.updated_at.strftime("%a %b %e at %l:%M%p") %></small></em></p>
             <p class="mb-1"><%= message.content %></p>
-            <div class="text-right">
-              <small><%= message.updated_at.strftime("%a %b %e at %l:%M%p") %></small>
-            </div>
           </div>
         </div>
       <% end %>
@@ -17,12 +15,10 @@
 
         <div class="message-container card p-2 mb-1 w-50" id="id">
           <div class="message-content">
-
+            <p class="mb-1"><small data-role="message-user"></small><small data-role="message-date"></small></p>
             <p class="mb-1" data-role="message-text"></p>
             
-            <div class="text-right">
-              <small data-role="message-date"></small>
-            </div>
+              
 
           </div>
         </div>
