--- a/app/assets/stylesheets/components/_list_item.scss
+++ b/app/assets/stylesheets/components/_list_item.scss
@@ -34,11 +34,19 @@
   margin-top: 10px;
 }
 
+.left-item {
+  margin-left: 30px;
+}
+
 .top-space {
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .top-space-2 {
   margin-top: 20px;
+}
+
+.white {
+  background-color: white;
 }
 
